--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,11 @@
     <title>Base template</title>
 </head>
 <body>
-{% block content %}
-{% endblock %}
+<div class="row">
+    <div class="columns small-12">
+        {% block content %}
+        {% endblock %}
+    </div>
+</div>
 </body>
 </html>
