--- a/app/Modules/Admin/templates/admin/index.html
+++ b/app/Modules/Admin/templates/admin/index.html
@@ -6,6 +6,17 @@
 
 {% block content %}
     <div class="row">
+        <div class="columns small-12">
+            <ul class="small-block-grid-4">
+                {% for name in ['settings', 'package', 'paper-plane', 'shield', 'speech-bubble-1', 'newspaper'] %}
+                <li>
+                    {% include "admin/icons/" ~ name ~ ".svg" %} Settings
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    <div class="row">
         {% for dashboard in dashboards %}
             <div class="columns {% for column in dashboard.getColumns() %}{{ column }} {% endfor %}">
                 {{ dashboard.render()|safe }}
