--- a/app/Modules/Admin/templates/admin/base.html
+++ b/app/Modules/Admin/templates/admin/base.html
@@ -18,10 +18,10 @@
     {%- else -%}
         <title>{{ t('Control panel', 'core') }} - {{ app.name }}</title>
     {%- endif -%}
-    <link rel="stylesheet" href="/static_admin/dist/1.0.0/css/bundle.css"/>
-    <script type='text/javascript' src="/static_admin/dist/1.0.0/js/bundle.js"></script>
+    <link rel="stylesheet" href="/static_admin/dist/2.0.0/css/bundle.css"/>
+    <script type='text/javascript' src="/static_admin/dist/2.0.0/js/bundle.js"></script>
     {#    <script type='text/javascript' src="http://localhost:8080/static_admin/dist/1.0.0/js/bundle.js"></script>#}
-    <script type='text/javascript' src="/static_admin/dist/1.0.0/ueditor107/ueditor.all.js"></script>
+    <script type='text/javascript' src="/static_admin/dist/2.0.0/ueditor107/ueditor.all.js"></script>
 
     {% block css %}{% endblock %}
 </head>
@@ -158,27 +158,26 @@
                 </div>
             </div>
         </div>
-        {% if not popup %}
-
-            <div class="footer">
-                <div class="row">
-                    <div class="columns small-12">
-                        <p>
-                            <a href="http://mindy-cms.com" target="_blank">Mindy
-                                Framework</a> &copy; {{ time()|date('Y') }}
-                            Исходный код <a href="https://github.com/MindyPHP" target="_blank">Github.com</a>
-                        </p>
-                        <p>
-                            Проект разработан <a href="http://studio107.ru"
-                                                 target="_blank">Studio107</a> &copy; {{ time()|date('Y') }}
-                        </p>
-                        <p>Запрещено использование для коммерческих проектов без предварительного письменного согласия
-                            автора.</p>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
     </div>
+    <div id="push"></div>
 </div>
+{% if not popup %}
+    <div class="footer">
+        <div class="row">
+            <div class="columns small-12">
+                <p>
+                    <a href="http://mindy-cms.com" target="_blank">Mindy Framework</a> &copy; {{ time()|date('Y') }}
+                    Исходный код <a href="https://github.com/MindyPHP" target="_blank">Github.com</a>
+                </p>
+                <p>
+                    Проект разработан <a href="http://studio107.ru"
+                                         target="_blank">Studio107</a> &copy; {{ time()|date('Y') }}
+                </p>
+                <p>Запрещено использование для коммерческих проектов без предварительного письменного согласия
+                    автора.</p>
+            </div>
+        </div>
+    </div>
+{% endif %}
 </body>
 </html>
