--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
                     </li>
                     {% for category in get_recipe_categories() %}
                         <li>
-                            <a href="#">{{ category }}</a>
+                            <a href="{{ category.getAbsoluteUrl() }}">{{ category }}</a>
                         </li>
                     {% endfor %}
                     <li>
