--- a/WWW/static/src/scss/_settings.scss
+++ b/WWW/static/src/scss/_settings.scss
@@ -15,6 +15,6 @@ $retina: "only screen and (-webkit-min-device-pixel-ratio: 2),
 $border-radius: 4px;
 
 $row-width: rem-calc(1008);
-$body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
+$body-font-family: Lato, "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
 $block-margin: 45px;
 $border-size: 2px;
