--- a/app/Modules/Recipe/templates/recipe/view.html
+++ b/app/Modules/Recipe/templates/recipe/view.html
@@ -7,33 +7,64 @@
                 <h1>{{ recipe }}</h1>
             </div>
             <div class="columns small-12 medium-6">
-                qwe
+                <img src="{{ recipe.image.url_resize }}" alt="{{ recipe }}"/>
             </div>
             <div class="columns small-12 medium-6">
-                {{ recipe.description_short|safe }}
+                {{ recipe.description|safe }}
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="columns small-12">
+            <div class="recipe-view-ingridients-container">
+                <h3>Ингридиенты</h3>
+                {% for ingridient in recipe.ingridients.all() %}
+                    <div class="row">
+                        <div class="columns small-6">
+                            {{ ingridient.name }}
+                        </div>
+                        <div class="columns small-6">
+                            {{ ingridient.count }}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="columns small-12">
             <div class="recipe-view-content">
-                {{ recipe.description|safe }}
+                <div class="recipe-view-instructions-container">
+                    <h3>Инструкция</h3>
+                    {% for instruction in recipe.instructions.all() %}
+                        <div class="row">
+                            <div class="columns small-2">
+                                <img src="{{ instruction.image.url }}" alt="{{ recipe }}"/>
+                            </div>
+                            <div class="columns small-10">
+                                <p class="recipe-view-instructions-step">Шаг {{ loop.counter }}:</p>
+                                {{ instruction.text|safe }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="recipe-view-related-container">
-        <div class="row">
-            <div class="columns small-12">
-                <ul class="small-block-grid-3">
-                    {% for i in range(0, 2) %}
-                        <li>
-                            {% include "recipe/_view.html" %}
-                        </li>
-                    {% endfor %}
-                </ul>
+    {% if related|length > 0 %}
+        <div class="recipe-view-related-container">
+            <div class="row">
+                <div class="columns small-12">
+                    <h2>Похожие рецепты</h2>
+                    <ul class="small-block-grid-3">
+                        {% for related_recipe in related %}
+                            <li>
+                                {% include "recipe/_view.html" with ['recipe' => related_recipe] %}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock %}
