--- a/app/Modules/Recipe/templates/recipe/view.html
+++ b/app/Modules/Recipe/templates/recipe/view.html
@@ -29,6 +29,9 @@
                         </div>
                     </div>
                 {% endfor %}
+                <div>
+                    <a href="#" class="button">Добавить в список покупок</a>
+                </div>
             </div>
         </div>
         <div class="columns small-12">
