--- a/app/templates/_breadcrumbs.html
+++ b/app/templates/_breadcrumbs.html
@@ -6,7 +6,7 @@
                     <li>
                         <a href="{% if app.homeUrl %}{{ app.homeUrl }}{% else %}/{% endif %}" rel="tooltip" title="{{ param.core.sitename }}">Главная</a>
                     </li>
-                    {% for bc in this.breadcrumbs %}
+                    {% for bc in breadcrumbs %}
                         <li>&rarr; {% if loop.last %}{{ bc.name }}{% else %}<a rel="tooltip" title="{{ bc.name }}" href="{{ bc.url }}">{{ bc.name }}</a>{% endif %}</li>
                     {% endfor %}
                 </ul>
