--- a/app/templates/auth/login/form.html
+++ b/app/templates/auth/login/form.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ t('Login', 'auth') }}</h1>
+    <div class="row">
+        <div class="columns small-12">
+            <h1>{{ t('Login', 'auth') }}</h1>
 
-    <form action="{% url 'auth:login' %}" method="post">
-        {% csrf_token %}
-        {{ form.render()|safe }}
-        <div class="form-row">
-            <input type="submit" value="{{ t('Login', 'auth') }}">
+            <form action="{% url 'auth:login' %}" method="post">
+                {% csrf_token %}
+                {{ form.render()|safe }}
+                <div class="form-row">
+                    <input type="submit" value="{{ t('Login', 'auth') }}">
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
 {% endblock %}
