--- a/app/templates/auth/registration/form.html
+++ b/app/templates/auth/registration/form.html
@@ -1,27 +1,30 @@
 {% extends "auth/base.html" %}
 
 {% block breadcrumbs %}
-    {% set this.breadcrumbs = [['name' => t('Registration', 'auth')]] %}
+    {% set breadcrumbs = [['name' => t('Registration', 'auth')]] %}
     {% parent %}
-{% endblock %}
-
-{% block heading %}
-    <h1>{{ t('Registration', 'auth') }}</h1>
 {% endblock %}
 
 {% block content %}
     <div class="row">
-        <div class="columns small-12">
+        <div class="columns small-8">
+            <h1>{{ t('Registration', 'auth') }}</h1>
+
             <form action="" method="post">
                 {% csrf_token %}
                 {{ form.render()|safe }}
+
                 {% if profile_form %}
                     {{ profile_form.render()|safe }}
                 {% endif %}
+
                 <div class="form-row">
                     <input type="submit" class="button" value="{{ t('Registration', 'auth') }}"/>
                 </div>
             </form>
+        </div>
+        <div class="columns small-4">
+            Social auth
         </div>
     </div>
 {% endblock %}
