--- a/app/Modules/Admin/templates/admin/_menu.html
+++ b/app/Modules/Admin/templates/admin/_menu.html
@@ -5,15 +5,18 @@
             <input type="search" class="modules__search" placeholder="{{ t('Search...', 'admin') }}"/>
             <hr/>
             {% for name, items in get_modules_new_menu() %}
+                {% if items|length == 0 %}
+                    {% continue %}
+                {% endif %}
                 <div class="admin-index-menu">
                     <div class="admin-index-module-name">{{ name }}</div>
                     <ul class="small-block-grid-5">
                         {% for route in items %}
                             <li>
                                 <div class="admin-index-menu-item">
-                                    <div class="admin-index-menu-icon">
+                                    <a class="admin-index-menu-icon" href="{{ route.url }}">
                                         {% include route.icon ? route.icon : "admin/icons/unknown.svg" %}
-                                    </div>
+                                    </a>
                                     <a href="{{ route.url }}">{{ route.name }}</a>
                                 </div>
                             </li>
