--- a/app/Modules/Admin/templates/admin/admin/panel/_buttons.html
+++ b/app/Modules/Admin/templates/admin/admin/panel/_buttons.html
@@ -1,40 +1,35 @@
-<form action="" method="get">
-    <table class="table--toolbar">
-        <thead>
-        <tr>
-            {% if admin.can('create') %}
-                <th class="buttons">Действия</th>
-            {% endif %}
-            {% if admin.searchFields|length > 0 %}
-                <th class="search">Поиск</th>
-            {% endif %}
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td class="buttons">
-                {% if admin.can('create') %}
-                    <a href="{{ admin.getAdminUrl('create') }}" class="button button-primary button-small">
-                        <i class="icon add square"></i>
-                        {{ t('Create', 'admin') }}
-                    </a>
-                {% endif %}
-                <a href="{{ admin.getAdminUrl('export') }}" target="_blank"
-                   class="button basic button-small">
-                    <i class="icon download"></i>
-                    {{ t('Export', 'admin') }}
-                </a>
-            </td>
-            {% if admin.searchFields|length > 0 %}
-                <td class="search">
-                    <input type="text" name="search" placeholder="{{ t('Search','admin') }}..."
-                           value="{{ request.get.get('search') }}"/>
-                    <button type="submit" class="ui button tiny primary icon">
-                        <i class="search icon"></i> {{ t('Search', 'admin') }}
-                    </button>
-                </td>
-            {% endif %}
-        </tr>
-        </tbody>
-    </table>
-</form>
+{% if admin.can('create') or admin.can('export') or admin.searchFields|length > 0 %}
+    <form action="" method="get">
+        <div class="admin--list__button-container">
+            <div class="row">
+                <div class="columns small-3">
+                    {% if admin.can('create') %}
+                        <a href="{{ admin.getAdminUrl('create') }}" class="button button-primary button-small">
+                            <i class="icon add square"></i>
+                            {{ t('Create', 'admin') }}
+                        </a>
+                    {% endif %}
+                    {% if admin.can('export') %}
+                        <a href="{{ admin.getAdminUrl('export') }}" target="_blank"
+                           class="button basic button-small">
+                            <i class="icon download"></i>
+                            {{ t('Export', 'admin') }}
+                        </a>
+                    {% endif %}
+                </div>
+                <div class="columns small-3">
+                    {% if admin.searchFields|length > 0 %}
+                        <input type="text" name="search" placeholder="{{ t('Search','admin') }}..."
+                               value="{{ request.get.get('search') }}"/>
+                        <button type="submit" class="ui button tiny primary icon">
+                            <i class="search icon"></i> {{ t('Search', 'admin') }}
+                        </button>
+                    {% else %}
+                        &nbsp;
+                    {% endif %}
+                </div>
+                <div class="columns small-6">&nbsp;</div>
+            </div>
+        </div>
+    </form>
+{% endif %}
