--- a/app/Modules/Admin/templates/admin/base.html
+++ b/app/Modules/Admin/templates/admin/base.html
@@ -19,8 +19,8 @@
         <title>{{ t('Control panel', 'core') }} - {{ app.name }}</title>
     {%- endif -%}
     <link rel="stylesheet" href="/static_admin/dist/2.0.0/css/bundle.css"/>
-    {#<script type='text/javascript' src="/static_admin/dist/2.0.0/js/bundle.js"></script>#}
     <script type='text/javascript' src="http://localhost:8080/static_admin/dist/2.0.0/js/bundle.js"></script>
+    {#<script type='text/javascript' src="/static_admin/dist/2.0.0/js/bundle.js"></script>#}
     <script type='text/javascript' src="/static_admin/dist/2.0.0/ueditor107/ueditor.all.js"></script>
 
     {% block css %}{% endblock %}
@@ -91,7 +91,9 @@
                         <ul class="header--main">
                             <li>
                                 <a href="#" class="header--button__menu">
-                                    {% include "admin/menu.svg" %}
+                                    <div id="logo">
+                                        {% include "admin/logo.svg" %}
+                                    </div>
                                     {% block name %}
                                         <span class="header--title">
                                             {{ module.getName() ? module.getName() : t('Dashboard', 'admin') }}
@@ -125,7 +127,7 @@
                                 {% if module %}
                                     {% set menu = get_module_new_menu(module.getId()) %}
                                     {% for item in menu %}
-                                        <li class="tab--item tab--item{% if (admin and admin.classNameShort() in item.url) or item.url == request.path %}__active{% endif %}">
+                                        <li class="tab--item tab--item{% if admin and admin.classNameShort() == item.url|explode('/')[4] or item.url == request.path %}__active{% endif %}">
                                             <a href="{{ item.url }}">{{ item.name }}</a>
                                         </li>
                                     {% endfor %}
