fix auth, core, example, user modules

--- a/app/Modules/Auth/templates/auth/login/form.html
+++ b/app/Modules/Auth/templates/auth/login/form.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         {{ form.render()|safe }}
         <div class="form-row">
-            <input type="submit" value="{{ t('Login', 'auth') }}">
+            <input type="submit" value="{{ t('Login', [], 'modules.Auth') }}">
         </div>
     </form>
 {% endblock %}
