--- a/app/Modules/Example/templates/example/index.html
+++ b/app/Modules/Example/templates/example/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Welcome to example module</h1>
+    <div class="row">
+        <div class="columns small-12">
+            <h1>Welcome to example module</h1>
 
-    {% for model in models %}
-        <p>{{ model.id }} - {{ model.name }}</p>
-    {% endfor %}
+            {% for model in models %}
+                <p>{{ model.id }} - {{ model.name }}</p>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
